part-3/exercise_3-02/manifests/deployment_log.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-vol
          persistentVolumeClaim:
            claimName: sv-claim
        - name: config
          configMap:
            name: log-output-reader-configmap
            items:
              - key: "information.txt"
                path: "information.txt"
      containers:
        - name: log-output-writer
          image: ethanrailo/log-output-writer:version1.0
          volumeMounts:
            - name: shared-vol
              mountPath: /usr/src/app/files
        - name: log-output-reader
          image: ethanrailo/log-output-reader:version1.5
          volumeMounts:
            - name: shared-vol
              mountPath: /usr/src/app/files
            - name: config
              mountPath: "/usr/src/app/config"
              readOnly: true
